✨ (login.html, index.html, menu.html, main.css): update button styles and enhance hero section layout for better UI The button styles have been changed from primary to success to create a more visually appealing interface. Additionally, the hero section has been enhanced with a full viewport height layout, centering its content for improved user experience. These changes aim to provide a more modern and engaging look to the application.

--- a/outfit/templates/nav/menu.html
+++ b/outfit/templates/nav/menu.html
@@ -18,11 +18,11 @@
                 <ul class="navbar-nav ms-auto">
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="btn btn-primary" href="{% url 'logout_view' %}">Выйти</a>
+                            <a class="btn btn-success" href="{% url 'logout_view' %}">Выйти</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="btn btn-primary" href="/login">Вход</a>
+                            <a class="btn btn-success" href="/login">Вход</a>
                         </li>
                     {% endif %}
                 </ul>
