--- a/outfit/templates/auth/login.html
+++ b/outfit/templates/auth/login.html
@@ -30,7 +30,7 @@
                                 <label class="form-check-label" for="rememberMe">Запомнить меня</label>
                             </div>
                             <div class="d-grid">
-                                <button type="submit" class="btn btn-primary">Войти</button>
+                                <button type="submit" class="btn btn-success">Войти</button>
                             </div>
                         </form>
                         <p class="text-center mt-3">
