--- a/outfit/templates/index.html
+++ b/outfit/templates/index.html
@@ -6,14 +6,21 @@
 
 {% block content %}
 
-
-<section class="py-5 bg-primary text-white text-center hero-section">
+<style>
+.hero-section {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+</style>
+<section class="py-5 bg-success text-white text-center hero-section">
     <div class="container position-relative overflow-hidden">
         <div class="row justify-content-center">
             <div class="col-lg-10">
                 <h1 class="display-3 fw-bold text-uppercase">OutfitMate</h1>
                 <p class="lead mt-3">
-                    Современные IT-решения для малого и среднего бизнеса.
+                    Подбор одежды из вашего гардероба
                 </p>
                 <a href="{% url 'register_page_view'%}" class="btn btn-light btn-lg mt-4">Попробовать</a>
             </div>
