--- a/outfit/templates/nav/menu.html
+++ b/outfit/templates/nav/menu.html
@@ -1,31 +1,25 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="{% url 'home' %}">OutfitMate</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'insurance_list' %}">Продукты</a>
+                    <a class="nav-link" href="{% url 'insurance_list' %}">Мой гардероб</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'create_request' %}">Оставить заявку</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'my_requests' %}">Мои заявки</a>
-                </li>
-                <ul class="navbar-nav ms-auto">
-                    {% if user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="btn btn-success" href="{% url 'logout_view' %}">Выйти</a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="btn btn-success" href="/login">Вход</a>
-                        </li>
-                    {% endif %}
-                </ul>
+            </ul>
+            <ul class="navbar-nav">
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="btn btn-success ms-2" href="{% url 'logout_view' %}">Выйти</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="btn btn-success ms-2" href="{% url 'login_page_view' %}">Вход</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
