✨ (admin.py, models.py, views.py, migrations): introduce Category and Filter models, and remove Insurance and Request models to streamline the application structure 📝 (admin.py, urls.py, views.py): update admin registration and remove obsolete views and URLs related to Insurance and Request
The changes introduce new models for Category and Filter, which enhance the application's functionality by allowing better organization of items. The removal of the Insurance and Request models simplifies the data structure, making it easier to manage and maintain. Additionally, the admin interface and views have been updated to reflect these changes, ensuring a cohesive user experience. The addition of the Pillow library in requirements.txt supports image handling for the new Item model.

--- a/outfit/templates/nav/menu.html
+++ b/outfit/templates/nav/menu.html
@@ -7,7 +7,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'insurance_list' %}">Мой гардероб</a>
+                    <a class="nav-link" href="{% url 'home' %}">Мой гардероб</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
