--- a/outfit/templates/item_picker.html
+++ b/outfit/templates/item_picker.html
@@ -28,7 +28,7 @@
                         {% endif %}
                         <div class="card-body d-flex flex-column justify-content-between">
                             <h5 class="card-title">{{ item.name }}</h5>
-                            <button class="btn btn-outline-primary toggle-button" data-item-id="{{ item.id }}">
+                            <button class="btn btn-outline-success toggle-button" data-item-id="{{ item.id }}">
                                 {% if item.id|stringformat:"s" in selected_items %}
                                     Убрать
                                 {% else %}
@@ -46,9 +46,10 @@
             <p class="label">
                 Осталось добавить вещей: <span id="items-to-add"></span>
             </p>            
-            <a class="btn btn-success {% if selected_items|length < 10 %}disabled{% endif %}" href="man_fashion.html" id="recommendation-link">
-                Ура! Смотреть рекомендации <i class="bi bi-chevron-right"></i>
-            </a>
+            <a class="btn btn-success {% if selected_items|length < 10 %}disabled{% endif %}" 
+            href="{% url 'recommendations' %}" id="recommendation-link">
+             Ура! Смотреть рекомендации <i class="bi bi-chevron-right"></i>
+            </a>         
         </section>
     </section>
 </main>
