✨ (recommendations): enhance default image display and add favorites functionality The default image display is improved by replacing the static image with a styled placeholder that indicates the absence of an image. Additionally, a new feature is introduced to allow users to add outfits to their favorites, enhancing user engagement and experience. This functionality includes user feedback messages to inform them of the action's success or if the outfit is already in their favorites.

--- a/outfit/templates/recommendations.html
+++ b/outfit/templates/recommendations.html
@@ -31,7 +31,10 @@
                                         {% if item.image %}
                                             <img src="{{ item.image.url }}" class="card-img-top" alt="{{ item.name }}">
                                         {% else %}
-                                            <img src="default_image.jpg" class="card-img-top" alt="{{ item.name }}">  <!-- Replace with your default image URL -->
+
+                                            <div class="card-img-top bg-secondary text-white d-flex align-items-center justify-content-center" style="height: 150px;">
+                                                <i class="bi bi-image"></i>
+                                            </div>  <!-- Replace with your default image URL -->
                                         {% endif %}
                                         <div class="card-body">
                                             <p class="card-text text-center">{{ item.name }}</p>
