✨ (item_picker.html, menu.html, chooseItem.js): enhance UI and improve item selection functionality
The item picker now allows users to select items more intuitively with updated button states and progress tracking. The navigation menu has been expanded to include links for selecting items and viewing recommendations, improving user navigation. Additionally, the CSS has been cleaned up by removing unnecessary padding, enhancing the overall layout. These changes aim to provide a better user experience and streamline the item selection process.

--- a/outfit/templates/item_picker.html
+++ b/outfit/templates/item_picker.html
@@ -46,7 +46,7 @@
             <p class="label">
                 Осталось добавить вещей: <span id="items-to-add"></span>
             </p>            
-            <a class="btn btn-success {% if selected_items|length < 10 %}disabled{% endif %}" 
+            <a class="btn btn-success" 
             href="{% url 'recommendations' %}" id="recommendation-link">
              Ура! Смотреть рекомендации <i class="bi bi-chevron-right"></i>
             </a>         
