--- a/outfit/templates/item_picker.html
+++ b/outfit/templates/item_picker.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<main id="body" data-service="[&quot;UserItemToggler&quot;, &quot;VoteToggler&quot;]">
+<main id="body">
     <section id="wardrobe-welcome" class="container mb-5">
         <header class="text-center mb-4">
             <h1>Добро пожаловать на OutfitMate!</h1>
@@ -45,10 +45,7 @@
             </div>
         </div>
 
-        <section class="mt-4 text-center">
-            <p class="label">
-                Осталось добавить вещей: <span id="items-to-add"></span>
-            </p>            
+        <section class="mt-4 text-center">         
             <a class="btn btn-success" 
             href="{% url 'recommendations' %}" id="recommendation-link">
              Ура! Смотреть рекомендации <i class="bi bi-chevron-right"></i>
