--- a/outfit/templates/nav/menu.html
+++ b/outfit/templates/nav/menu.html
@@ -15,6 +15,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'recommendations' %}">Мои образы</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'favorite_outfits' %}">Избранное</a>
+                </li>
             </ul>
             <ul class="navbar-nav">
                 {% if user.is_authenticated %}
