✨ (item_picker.html, recommendations.html, views.py): enhance user experience with login alerts and improved messaging 📝 (views.py): clean up code by removing unnecessary comments and imports
Added a message alert for unauthenticated users attempting to use the favorites feature, prompting them to log in. Included a new script in the recommendations template to handle the alert. Cleaned up the views.py file by removing redundant comments and imports, improving code readability and maintainability. These changes aim to provide a smoother user experience and streamline the codebase.

--- a/outfit/templates/item_picker.html
+++ b/outfit/templates/item_picker.html
@@ -3,13 +3,14 @@
 
 {% block content %}
 <main id="body">
+    {% include 'messages.html' %}
     <section id="wardrobe-welcome" class="container mb-5">
         <header class="text-center mb-4">
             <h1>Добро пожаловать на OutfitMate!</h1>
             <p>OutfitMate проанализирует твой гардероб и покажет, какие образы ты можешь составить</p>
             <p>Необходимо добавить хотя бы 10 вещей из твоего гардероба, чтобы получить рекомендации.</p>
         </header>
-
+        
         <div class="suggested-items-container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
                 {% for item in items %}
